# gomiatsume

./: .env.sample  .gitignore  Cargo.toml
src/: config.rs  main.rs
