[package]
name = "gomiatsume"
version = "0.1.0"
authors = ["naari3 <naari.named@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros", "fs", "sync"] }
egg-mode = "0.15"
dotenv = "*"
dotenv_codegen = "0.15"
futures = "0.3"
reqwest = "0.10.8"
url = "2.1"
webbrowser = "0.5.5"